# gear_vr_controller

./: .gitignore  COMPARISON.md  Cargo.toml  LICENSE  MIGRATION_COMPLETE.md  README.md  README_RUST.md  ROADMAP.md
.github/workflows/: release.yml
GearVRController/: GearVRController.sln
GearVRController/GearVRController/: App.xaml  App.xaml.cs  GearVRController.csproj  MainWindow.xaml  MainWindow.xaml.cs  Package.appxmanifest  app.manifest
GearVRController/GearVRController/Converters/: BoolToControlStateConverter.cs  BoolToVisibilityConverter.cs  BooleanConverters.cs  CalibrationStepToContentConverter.cs  CalibrationStepToStyleConverter.cs  NullToBooleanConverter.cs  StatusConverters.cs
GearVRController/GearVRController/Enums/: GestureAction.cs  GestureDirection.cs  MouseButtons.cs  TouchpadGesture.cs  VirtualKeyCode.cs
GearVRController/GearVRController/Events/: CalibrationCompletedEvent.cs  ConnectionStatusChangedEvent.cs  ControllerDataReceivedEvent.cs  GestureExecutedEvent.cs  InputTimeoutDetectedEvent.cs  SettingsChangedEvent.cs
GearVRController/GearVRController/Helpers/: InputSimulator.cs
logs/: gear_vr_controller.2025-12-30
src/: admin_client.rs  admin_worker.rs  bluetooth.rs  controller.rs  gestures.rs  main.rs  models.rs  settings.rs  ui.rs
src/application/: mod.rs
src/domain/: controller.rs  gestures.rs  imu.rs  mod.rs  models.rs  settings.rs
src/infrastructure/: bluetooth.rs  input_simulator.rs  logging.rs  mod.rs
src/infrastructure/bluetooth/: mod.rs  (+4 more)
src/presentation/: app.rs  components.rs  mod.rs  radial_menu.rs  theme.rs  ui.rs
(+58 files in other folders)
