[package]
name = "gear_vr_controller_rust"
version = "0.1.0"
edition = "2021"

[dependencies]
# GUI framework
eframe = "0.29"
egui = "0.29"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization for settings
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Logging
log = "0.4"
env_logger = "0.11"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Directories
dirs = "5.0"

# Image support for egui
egui_extras = "0.29"
windows-future = "0.3.2"
windows = { version = "0.62.2", features = ["Win32_Devices_Bluetooth", "Win32_Foundation", "Win32_System_Com", "Win32_UI_Input_KeyboardAndMouse", "Win32_UI_WindowsAndMessaging", "Devices_Bluetooth", "Devices_Bluetooth_Advertisement", "Devices_Bluetooth_GenericAttributeProfile", "Devices_Enumeration", "Storage_Streams", "Foundation", "Foundation_Collections"] }
